# djang-htmx-model

./: pyproject.toml  readme.md
ml_models/: train_iris.py
mlproj/: settings.py  urls.py
mlviews/: apps.py  urls.py  views.py
mlviews/templates/: home.html
